# dnd-card-maker

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  podman-compose.dev.yml  podman-compose.yml  tsconfig.app.json  vite.config.ts
.codebase-memory/: artifact.json  graph.db.zst
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .env.example  Containerfile  Containerfile.dev  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  constants.py  database.py  dependencies.py  limiter.py  main.py
backend/app/models/: __init__.py  card.py  deck.py  email.py  guest_deck.py  user.py
backend/app/routes/: __init__.py  admin.py  auth.py  cards.py  decks.py  decks_share.py  dev.py  guest_decks.py  images.py  proxy.py  share.py  users.py
backend/app/schemas/: __init__.py  auth.py  card.py  deck.py  guest_deck.py  user.py
backend/app/services/: __init__.py  auth.py  card_service.py  deck_service.py  email.py  guest_deck_service.py
backend/app/templates/: __init__.py  reset_email.html  verify_email.html
backend/app/utils/: __init__.py  deck_helpers.py  shared.py
backend/tests/: conftest.py  test_api.py  test_app_api.py  test_auth_api.py  test_auth_service.py  test_card_service.py  test_cards_api.py  test_deck_service.py  test_decks_api.py  test_dependencies.py  test_dev_mail_api.py  test_images_proxy.py  test_share_api.py  test_user_routes.py  test_utils.py
docs/: api-reference.md  architecture.md  configuration.md  deployment.md  development.md  features.md  getting-started.md
frontend/: .env.example  .gitignore  Containerfile  Dockerfile  README.md  (+8 more)
(+276 files in other folders)
